<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="library">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="released_tracks">Новые релизы</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="url_android_course">https://practicum.yandex.ru/android-developer</string>
    <string name="intent_mail_to">afxaster@yandex.ru</string>
    <string name="intent_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="intent_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer</string>

    <string name="not_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="no_internet_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history_header">Вы искали</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="empty_favourite">Ваша медиатека пуста</string>
    <string name="empty_playlist_library">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="required_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>

    <string name="ask_finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="lost_data_warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="quit">Завершить</string>

    <string name="playlist">Плейлист</string>
    <string name="was_created">Создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="was_added">Добавлено в плейлист</string>
    <string name="already_added">Трек уже добавлен в плейлист</string>

    <plurals name="track">
        <item quantity="zero">%d трек</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minute">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <string name="delete">Удалить</string>
    <string name="remove_track">Удалить трек</string>
    <string name="ask_remove_track_confirmation">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="ask_remove_playlist_confirmation">Вы уверены, что хотите удалить этот плейлист?</string>

    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <string name="empty_tracks_for_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="add_artist">Добавить исполнителя</string>

    <string name="single">Сингл</string>
    <string name="ok">OK</string>

    <string name="tier">Tier</string>

    <string name="edit_dates">Изменить даты</string>
    <string name="invalid_dates">Неверные даты</string>
</resources>