<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="@dimen/medium_padding"
        android:paddingTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/YP_white" />

    <Button
        android:id="@+id/search_button"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/library_button"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="@dimen/medium_padding"
        android:layout_weight="1"
        android:text="@string/library"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/settings_button"
        style="@style/MenuButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/medium_padding"
        android:layout_marginTop="@dimen/medium_padding"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>