<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.presentation.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        app:contentInsetStart="16dp"
        app:title="@string/settings"
        app:titleMarginTop="14dp"
        app:titleTextAppearance="@style/Header" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_settings"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/SettingsItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            app:thumbTint="@color/theme_switcher_thumb"
            app:trackTint="@color/theme_switcher_track" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_settings">

        <TextView
            style="@style/SettingsItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/share_button"
            style="@style/SettingsItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_settings">

        <TextView
            style="@style/SettingsItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/support_button"
            style="@style/SettingsItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_settings">

        <TextView
            style="@style/SettingsItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/user_agreement_button"
            style="@style/SettingsItemIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>
</LinearLayout>