<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_settings"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="4dp">
        <ImageView
            android:id="@+id/back_from_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="@dimen/medium_padding"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/header_settings" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:text="@string/settings"
            android:textColor="@color/header_settings"
            android:textSize="@dimen/big_text_size" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/item_vertical_padding_settings"
            android:layout_marginStart="@dimen/medium_padding"
            android:text="@string/dark_theme"
            android:textColor="@color/item_name_settings"
            android:textSize="@dimen/medium_text_size" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="22dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/item_vertical_padding_settings"
            android:layout_marginStart="@dimen/medium_padding"
            android:text="@string/share_app"
            android:textColor="@color/item_name_settings"
            android:textSize="@dimen/medium_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="21dp"
            android:src="@drawable/ic_share"
            app:tint="@color/item_icon_settings" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/item_vertical_padding_settings"
            android:layout_marginStart="@dimen/medium_padding"
            android:text="@string/write_to_support"
            android:textColor="@color/item_name_settings"
            android:textSize="@dimen/medium_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="21dp"
            android:src="@drawable/ic_support"
            app:tint="@color/item_icon_settings" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/item_vertical_padding_settings"
            android:layout_marginStart="@dimen/medium_padding"
            android:text="@string/user_agreement"
            android:textColor="@color/item_name_settings"
            android:textSize="@dimen/medium_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="23dp"
            android:src="@drawable/ic_arrow_forward"
            app:tint="@color/item_icon_settings" />
    </FrameLayout>
</LinearLayout>