<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".playlist.presentation.NewPlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        app:contentInsetStartWithNavigation="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/new_playlist"
        app:titleMarginTop="14dp"
        app:titleTextAppearance="@style/Header" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/artwork"
        android:layout_width="@dimen/new_playlist_artwork_size"
        android:layout_height="@dimen/new_playlist_artwork_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/new_playlist_artwork_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:shapeAppearance="@style/ArtworkRoundedCorners.NewPlaylist" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_layout_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/input_layout_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_layout_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:hint="@string/required_name"
        android:padding="0dp"
        android:textColorHint="?attr/colorOnBackground"
        app:boxStrokeColor="@color/input_stroke_color"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextAppearance="@style/NewPlaylistHintAppearance"
        app:hintTextColor="@color/YP_blue"
        app:layout_constraintEnd_toEndOf="@id/input_layout_end"
        app:layout_constraintStart_toStartOf="@id/input_layout_start"
        app:layout_constraintTop_toBottomOf="@id/artwork">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:textFontWeight="400"

            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_layout_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        android:textColorHint="?attr/colorOnBackground"
        app:boxStrokeColor="@color/input_stroke_color"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextAppearance="@style/NewPlaylistHintAppearance"
        app:hintTextColor="@color/YP_blue"
        app:layout_constraintEnd_toEndOf="@id/input_layout_end"
        app:layout_constraintStart_toStartOf="@id/input_layout_start"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:textFontWeight="400"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/create_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/create_playlist_button_color"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/YP_white"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>