<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:theme="@style/TrackInfoInAudioPlayer">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_from_audio_player_button"
            android:layout_width="@dimen/header_icon_size"
            android:layout_height="@dimen/header_icon_size"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:padding="@dimen/header_icon_padding"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/main_content_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/artwork"
            android:layout_width="@dimen/audio_player_artwork_size"
            android:layout_height="@dimen/audio_player_artwork_size"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toStartOf="@id/main_content_end"
            app:layout_constraintStart_toStartOf="@id/main_content_start"
            app:layout_constraintTop_toBottomOf="@id/back_from_audio_player_button"
            app:shapeAppearance="@style/ArtworkRoundedCorners.AudioPlayer"
            tools:src="@drawable/ic_placeholder" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="22sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/main_content_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/main_content_start"
            app:layout_constraintTop_toBottomOf="@id/artwork"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/main_content_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/main_content_start"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="The Beatles" />

        <ImageView
            android:id="@+id/add_to_playlist_button"
            android:layout_width="@dimen/audio_player_additional_button_size"
            android:layout_height="@dimen/audio_player_additional_button_size"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/audio_player_additional_button"
            android:padding="14dp"
            android:src="@drawable/ic_add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/play_button"
            app:layout_constraintEnd_toStartOf="@id/play_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/main_content_start"
            app:layout_constraintTop_toTopOf="@id/play_button" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="@dimen/audio_player_play_button_size"
            android:layout_height="@dimen/audio_player_play_button_size"
            android:layout_marginTop="38dp"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toStartOf="@id/add_to_favourite_button"
            app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:tint="?attr/colorOnBackground" />

        <ImageView
            android:id="@+id/add_to_favourite_button"
            android:layout_width="@dimen/audio_player_additional_button_size"
            android:layout_height="@dimen/audio_player_additional_button_size"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/audio_player_additional_button"
            android:padding="14dp"
            android:src="@drawable/ic_favourite"
            app:layout_constraintBottom_toBottomOf="@id/play_button"
            app:layout_constraintEnd_toStartOf="@id/main_content_end"
            app:layout_constraintStart_toEndOf="@id/play_button"
            app:layout_constraintTop_toTopOf="@id/play_button" />

        <TextView
            android:id="@+id/play_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="0:00"
            app:layout_constraintEnd_toStartOf="@id/main_content_end"
            app:layout_constraintStart_toStartOf="@id/main_content_start"
            app:layout_constraintTop_toBottomOf="@id/play_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/subinfo_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/subinfo_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/label_duration"
            style="@style/TrackInfoInAudioPlayer.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/subinfo_start"
            app:layout_constraintTop_toBottomOf="@id/play_progress" />

        <TextView
            android:id="@+id/label_collection"
            style="@style/TrackInfoInAudioPlayer.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audio_player_subinfo_sections_space"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@id/subinfo_start"
            app:layout_constraintTop_toBottomOf="@id/track_time" />

        <TextView
            android:id="@+id/label_release_year"
            style="@style/TrackInfoInAudioPlayer.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audio_player_subinfo_sections_space"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@id/subinfo_start"
            app:layout_constraintTop_toBottomOf="@id/track_collection" />

        <TextView
            android:id="@+id/label_genre"
            style="@style/TrackInfoInAudioPlayer.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audio_player_subinfo_sections_space"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/subinfo_start"
            app:layout_constraintTop_toBottomOf="@id/track_release_year" />

        <TextView
            android:id="@+id/label_country"
            style="@style/TrackInfoInAudioPlayer.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/audio_player_subinfo_sections_space"
            android:layout_marginBottom="20dp"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/subinfo_start"
            app:layout_constraintTop_toBottomOf="@id/track_genre" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/labels_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="label_collection, label_country, label_duration, label_genre, label_release_year" />


        <TextView
            android:id="@+id/track_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@id/label_duration"
            app:layout_constraintEnd_toStartOf="@id/subinfo_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/labels_barrier"
            tools:text="5:35" />

        <TextView
            android:id="@+id/track_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/label_collection"
            app:layout_constraintEnd_toStartOf="@id/subinfo_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/labels_barrier"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/track_release_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@id/label_release_year"
            app:layout_constraintEnd_toStartOf="@id/subinfo_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/labels_barrier"
            tools:text="1965" />

        <TextView
            android:id="@+id/track_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@id/label_genre"
            app:layout_constraintEnd_toStartOf="@id/subinfo_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/labels_barrier"
            tools:text="Rock" />

        <TextView
            android:id="@+id/track_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@id/label_country"
            app:layout_constraintEnd_toStartOf="@id/subinfo_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/labels_barrier"
            tools:text="Великобритания" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/collection_section"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="label_collection, track_collection" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>